--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -91,9 +91,6 @@ div.sm-selector-container .domain-selector {
   .date-card {
     min-width: "12rem";
   }
-  .date-card:last-child {
-    justify-content: end;
-  }
 }
 
 @media (min-width: 1024px) {
